--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -1,8 +1,16 @@
 html {
-    font-size: 16px;
+    font-size: $font-size-default;
 
     body {
-        font-family: 'Courier New', Courier, monospace;
+        font-family: $font-family-primary;
         font-size: 1rem;
+        color: $color-black;
+        background-color: $color-white;
+
+        @import "header";
+
+        @import "main";
+
+        @import "footer";
     }
 }
