Homepage : Promotions section

--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -9,3 +9,7 @@ $color-black: #333333;
 $color-white: #ffffff;
 $color-primary: #d13434;
 $color-secondary: #bdbdbd;
+
+/* Thumbnails variables */
+$thumbnail-image-height: 200px;
+$thumbnail-border-radius: 0.5rem;
