--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,9 +1,11 @@
 .app-footer {
-    padding: 1rem 0.5rem 4.75rem;
+    padding: 1rem 0.5rem;
+    margin-bottom: 3.75rem;
     color: $color-white;
     background-color: $color-black;
 
     @include respond(sm) {
         padding-bottom: 1rem;
+        margin-bottom: 0;
     }
 }
