--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,11 +1,15 @@
 .app-footer {
     padding: 1rem 0.5rem;
-    margin-bottom: 3.75rem;
+    margin-bottom: 4.75rem;
     color: $color-white;
     background-color: $color-black;
 
     @include respond(sm) {
         padding-bottom: 1rem;
         margin-bottom: 0;
+    }
+
+    .app-copyrights {
+        text-align: center;
     }
 }
