--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -94,11 +94,19 @@
                 a {
                     display: block;
                     padding: 1rem 1.5rem;
-                    color: inherit;
+                    font-family: $font-family-secondary;
+                    font-size: 0.5rem;
+                    font-weight: bold;
+                    text-align: center;
+                    text-transform: uppercase;
+                    color: $color-secondary;
                     text-decoration: none;
 
                     i {
+                        display: block;
+                        margin-bottom: 0.5rem;
                         font-size: 1.75rem;
+                        color: $color-primary;
                     }
                 }
             }
