--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,8 +1,9 @@
 .app-main {
-    padding: 0.75rem;
     background-color: $color-secondary;
 
     & > section {
+        padding: 0.75rem;
+
         & > header {
             margin: 0.5rem 0 1rem;
 
@@ -30,5 +31,7 @@
                 }
             }
         }
+
+        @import "../pages/homepage";
     }
 }
