--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -88,12 +88,12 @@
         .app-menu {
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: space-around;
 
             li {
                 a {
                     display: block;
-                    padding: 1rem 1.5rem;
+                    padding: 0.5rem 1rem;
                     font-family: $font-family-secondary;
                     font-size: 0.5rem;
                     font-weight: bold;
