--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -2,7 +2,7 @@
     background-color: $color-secondary;
 
     & > section {
-        padding: 0.75rem;
+        padding: 3rem 0.75rem;
 
         & > header {
             margin: 0.5rem 0 1rem;
