--- a/scss/layout/_sliders.scss
+++ b/scss/layout/_sliders.scss
@@ -33,7 +33,6 @@
             background-color: $color-white;
 
             .slide-title {
-                margin-bottom: 0.5rem;
                 font-family: $font-family-secondary;
                 font-size: 1.25rem;
                 font-weight: bold;
@@ -70,9 +69,11 @@
 .app-slider-previous,
 .app-slider-next {
     position: absolute;
-    bottom: 0.5rem;
+    bottom: 0.15rem;
     z-index: 9998;
+    padding: 0 0.5rem;
     color: $color-primary;
+    background-color: $color-white;
 
     i {
         font-size: 2rem;
@@ -80,9 +81,9 @@
 }
 
 .app-slider-previous {
-    left: 1rem;
+    left: 0;
 }
 
 .app-slider-next {
-    right: 1rem;
+    right: 0;
 }
