Last Slider changes

--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -13,3 +13,6 @@ $color-secondary: #bdbdbd;
 /* Thumbnails variables */
 $thumbnail-image-height: 200px;
 $thumbnail-border-radius: 0.5rem;
+
+/* Sliders variables */
+$slide-image-height: 250px;
