Homepage : CTA section

--- a/scss/layout/_sliders.scss
+++ b/scss/layout/_sliders.scss
@@ -36,7 +36,7 @@
                 font-family: $font-family-secondary;
                 font-size: 1.25rem;
                 font-weight: bold;
-                color: $color-primary;
+                color: $color-black;
             }
 
             .slide-description {
