Register & Login pages

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -28,7 +28,7 @@
         }
 
         .app-name {
-            h1 {
+            .app-title {
                 font-family: $font-family-secondary;
                 font-size: 2.25rem;
                 font-weight: bold;
