--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,7 +5,8 @@
 
 /* Layout imports */
 @import "layout/layout";
-@import "layout/grids";
-@import "layout/sliders";
-@import "layout/forms";
+@import "layout/grid";
+@import "layout/slider";
+@import "layout/form";
 @import "layout/cta";
+@import "layout/aside";
