--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -10,9 +10,11 @@ $color-white: #ffffff;
 $color-primary: #d13434;
 $color-secondary: #bdbdbd;
 
+/* Borders variables */
+$border-radius-default: 0.5rem;
+
 /* Thumbnails variables */
 $thumbnail-image-height: 200px;
-$thumbnail-border-radius: 0.5rem;
 
 /* Sliders variables */
 $slide-image-height: 250px;
