--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -4,9 +4,35 @@
         grid-gap: 1rem;
     }
 
+    &.grid-two {
+        @include respond(sm) {
+            grid-template-columns: repeat(2, 1fr);
+
+            & > section {
+                &:nth-child(odd) {
+                    padding-right: 0;
+                }
+        
+                &:nth-child(even) {
+                    padding-left: 0;
+                }
+            }
+        }
+    }
+
     &.grid-three {
         @include respond(sm) {
             grid-template-columns: repeat(2, 1fr);
+
+            & > section {
+                &:nth-child(odd) {
+                    padding-right: 0;
+                }
+        
+                &:nth-child(even) {
+                    padding-left: 0;
+                }
+            }
         }
 
         @include respond(md) {
@@ -17,17 +43,25 @@
     .grid-item {
         margin-bottom: 1.5rem;
         background-color: $color-white;
-        border-radius: $thumbnail-border-radius;
+        border-radius: $border-radius-default;
         box-shadow: 2px 2px 4px rgba($color-black, 0.5);
 
-        @include respond(md) {
+        @include respond(sm) {
+            margin-bottom: 0;
+        }
+
+        &.noshadow {
+            box-shadow: none;
+        }
+
+        &:last-child {
             margin-bottom: 0;
         }
 
         .grid-item-image {
             overflow: hidden;
-            border-top-left-radius: $thumbnail-border-radius;
-            border-top-right-radius: $thumbnail-border-radius;
+            border-top-left-radius: inherit;
+            border-top-right-radius: inherit;
 
             img {
                 width: 100%;
@@ -39,8 +73,17 @@
             }
         }
 
+        .grid-item-icon {
+            text-align: center;
+
+            i {
+                font-size: 3rem;
+                color: $color-secondary;
+            }
+        }
+
         .grid-item-content {
-            padding: 1rem;
+            padding: 0.5rem;
             text-align: center;
             background-color: $color-white;
 
@@ -55,8 +98,10 @@
             .grid-item-description {
                 margin-bottom: 1rem;
                 font-size: 0.9rem;
-                text-align: justify;
-                hyphens: auto;
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
             }
 
             .grid-item-price {
@@ -84,8 +129,8 @@
             grid-template-columns: repeat(2, 1fr);
             align-items: center;
             background-color: $color-black;
-            border-bottom-left-radius: $thumbnail-border-radius;
-            border-bottom-right-radius: $thumbnail-border-radius;
+            border-bottom-left-radius: inherit;
+            border-bottom-right-radius: inherit;
             overflow: hidden;
 
             .grid-item-action {
@@ -127,8 +172,8 @@
             display: block;
             color: inherit;
             text-decoration: none;
-            border-top-left-radius: $thumbnail-border-radius;
-            border-top-right-radius: $thumbnail-border-radius;
+            border-top-left-radius: inherit;
+            border-top-right-radius: inherit;
         }
     }
 }
