--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -86,9 +86,9 @@
         }
 
         .app-menu {
-            display: flex;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
             align-items: center;
-            justify-content: space-around;
 
             li {
                 a {
@@ -107,6 +107,15 @@
                         margin-bottom: 0.5rem;
                         font-size: 1.75rem;
                         color: $color-primary;
+                    }
+
+                    &.active {
+                        color: $color-white;
+                        background-color: $color-primary;
+
+                        i {
+                            color: $color-white;
+                        }
                     }
                 }
             }
