--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -102,6 +102,7 @@
                     color: $color-secondary;
                     text-decoration: none;
                     transition: all 0.4s ease-out;
+                    cursor: pointer;
 
                     @include respond(sm) {
                         margin: 0 0.5rem;
