--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -98,6 +98,7 @@
             .grid-item-description {
                 margin-bottom: 1rem;
                 font-size: 0.9rem;
+                line-height: 1.25rem;
 
                 &:last-child {
                     margin-bottom: 0;
